crates/nirvash-macros/tests/fixtures/runtime_contract_duplicate_action.stderr
error: duplicate contract_case action
   --> tests/fixtures/runtime_contract_duplicate_action.rs:117:5
    |
117 |     #[nirvash_macros::contract_case(action = Action::Start, update(state = State::Idle))]
    |     ^
